--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uqr": "^0.1.2"
   }
 }
